tests/data/invalid_dtds/parameter_entities_internal_1/test.dtd
<!ENTITY % internal1 "&foo">
